--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,1 +1,68 @@
-/*# sourceMappingURL=index.css.map */
+@font-face {
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/static/Inter-Bold.ttf);
+}
+@font-face {
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/static/Inter-ExtraLight.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+  background: url(/assets/images/bg.jpg) fixed center/cover;
+}
+
+h1 {
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/static/Inter-Bold.ttf);
+  text-transform: uppercase;
+  font-weight: 850;
+  color: rgb(255, 252, 252);
+  letter-spacing: 5px;
+  width: 43%;
+  font-size: 2.8em;
+}
+
+p {
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/static/Inter-Bold.ttf);
+}
+
+header {
+  height: 100vh;
+}
+header .header-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80%;
+  padding: 5px;
+}
+header .header-title .par-icone p {
+  color: rgb(255, 252, 252);
+  font-style: italic;
+  margin-top: 20px;
+}
+
+main img {
+  width: 800px;
+}/*# sourceMappingURL=index.css.map */
