--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/static/Inter-Bold.ttf);
+  src: url(/assets/fonts/Inter-Bold.ttf);
 }
 @font-face {
   font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/static/Inter-ExtraLight.ttf);
+  src: url(/assets/fonts/Inter-ExtraLight.ttf);
 }
 * {
   margin: 0;
@@ -23,7 +23,7 @@ body {
 
 h1 {
   font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/static/Inter-Bold.ttf);
+  src: url(/assets/fonts/Inter-Bold.ttf);
   text-transform: uppercase;
   font-weight: 850;
   color: rgb(255, 252, 252);
@@ -34,7 +34,7 @@ h1 {
 
 p {
   font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/static/Inter-Bold.ttf);
+  src: url(/assets/fonts/Inter-Bold.ttf);
 }
 
 header {
@@ -54,13 +54,87 @@ header .header-title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80%;
-  padding: 5px;
+  height: 90%;
 }
-header .header-title .par-icone p {
-  color: rgb(255, 252, 252);
+header .header-title .part-icone p {
   font-style: italic;
-  margin-top: 20px;
+  color: rgb(241, 240, 240);
+  margin: 5px auto;
+}
+header .header-title .part-icone .icone {
+  width: 45px;
+  height: 45px;
+  border-radius: 150px;
+  margin: 20px auto;
+  border: solid 1px white;
+  position: relative;
+  cursor: pointer;
+}
+header .header-title .part-icone .icone i {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+header nav {
+  height: 80px;
+  width: clamp(600px, 80%, 1100px);
+  background: white;
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transform: translate(-50%);
+      -ms-transform: translate(-50%);
+          transform: translate(-50%);
+  left: 50%;
+  bottom: 0;
+}
+header nav .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+header nav .nav ul {
+  width: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+header nav .nav ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8em;
+  cursor: pointer;
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/Inter-Bold.ttf);
+}
+header nav .nav ul li a {
+  text-decoration: none;
+  list-style: none;
+  color: rgb(61, 60, 60);
+}
+header nav .reseau {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 
 main img {
