--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -20,6 +20,7 @@ header{
                 border: solid 1px white;
                 position: relative;
                 cursor: pointer;
+                
                 i{
                     color: white;
                     position:absolute;
@@ -30,62 +31,80 @@ header{
             }
         }
     }
-
     nav{
         height: 80px;
-        width: clamp(600px,80%,1100px);
-        background:white;
-        margin: 0 auto;
+        width: clamp(715px,80%,1200px);
+        background:rgba(209, 207, 207, 0.728);
+        color:black;
         position: absolute;
-        transform: translate(-50%);
+        transform: translateX(-50%);
         left: 50%;
         bottom: 0;
-        
-    
         .nav{
             display: flex;
             justify-content: space-between;
             width: 100%;
             height: 100%;
-     
-        ul{
+            ul{
             width: 45%;
             display: flex;
+            height: 100%;
+            &:hover li:not(:hover){
+                background: none;
+            }
+            &:hover li:not(:hover) a{
+                color:$color1;
+            }
             li{
                 display: flex;
                 align-items: center;
-                width: 100%;
-                text-transform:uppercase;
-                font-weight:bold;
-                font-size: .8em;
-                cursor: pointer;
+                text-transform: uppercase;
                 @include font1;
-                a{
-                    text-decoration: none;
-                    list-style: none;
-                    color:$color2;
+                cursor: pointer;
+                width: 100%;
+                height: 100%;
+                transition:  ease .3s;
+                &:hover{
+                    background: $color1;
                 }
-
-
+                &:hover a{
+                    color: black;
+                }
+                &:first-child{
+                    background: $color1;
+                }
+                &:first-child a{
+                    color: black;
+                }
+                a{
+                    color: $color1;
+                    width: 100%;
+                    transition:  ease .3s;
+                    font-size: .9rem;
+                    font-weight:700;
+                }
+            } 
             }
-        }
-        
-            
-        
-            
-           
-
-
         }
 
         .reseau{
             display: flex;
             align-items: center;
             height: 100%;
+            width: 15%;
+            i{
+                width: 25%;
+                cursor: pointer;
+                color:$color1;
+                transition:ease .5s;
+                &:hover{
+                    transform: scale(1.6);
+                }
+            }
         }
         
     }
-
+    
 }
    
     
