--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -32,11 +32,6 @@ h1 {
   font-size: 2.8em;
 }
 
-p {
-  font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/Inter-Bold.ttf);
-}
-
 a {
   text-decoration: none;
 }
@@ -85,7 +80,7 @@ header .header-title .part-icone .icone i {
 }
 header nav {
   height: 80px;
-  width: clamp(715px, 80%, 1200px);
+  width: clamp(715px, 80%, 1100px);
   background: rgba(209, 207, 207, 0.728);
   color: black;
   position: absolute;
@@ -135,13 +130,13 @@ header nav .nav ul li {
   transition: ease 0.3s;
 }
 header nav .nav ul li:hover {
-  background: rgb(255, 252, 252);
+  background: rgb(238, 236, 236);
 }
 header nav .nav ul li:hover a {
   color: black;
 }
 header nav .nav ul li:first-child {
-  background: rgb(255, 252, 252);
+  background: rgb(238, 236, 236);
 }
 header nav .nav ul li:first-child a {
   color: black;
@@ -177,6 +172,51 @@ header nav .reseau i:hover {
           transform: scale(1.6);
 }
 
+main {
+  background: rgb(255, 252, 252);
+  margin: 0 auto;
+  width: clamp(715px, 80vw, 1100px);
+}
+main .first-sect .date p {
+  padding: 50px 0;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  position: relative;
+}
+main .first-sect .date p::before, main .first-sect .date p::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  background: #cac8c8;
+  width: 30%;
+  left: 50%;
+  top: 50%;
+}
+main .first-sect .date p::before {
+  -webkit-transform: translate(-50%, -50%) translateX(-85%);
+      -ms-transform: translate(-50%, -50%) translateX(-85%);
+          transform: translate(-50%, -50%) translateX(-85%);
+}
+main .first-sect .date p::after {
+  -webkit-transform: translate(-50%, -50%) translateX(85%);
+      -ms-transform: translate(-50%, -50%) translateX(85%);
+          transform: translate(-50%, -50%) translateX(85%);
+}
+main .first-sect h2 {
+  text-transform: uppercase;
+  font-family: "Inter", sans-serif;
+  src: url(/assets/fonts/Inter-Bold.ttf);
+  font-weight: 800;
+  font-size: 1.8rem;
+  width: 40%;
+  margin: 0 auto;
+}
+main .first-sect .massive-p {
+  font-style: italic;
+  line-height: 38px;
+  width: 50%;
+  margin: 20px auto;
+}
 main img {
-  width: 800px;
+  width: 50%;
 }/*# sourceMappingURL=index.css.map */
