--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -1,8 +1,50 @@
 main{
-    // .first-sect{
-        
-    // }
+    background: $color1;
+    margin: 0 auto;
+    width: clamp(715px,80vw,1100px);
+
+    .first-sect{
+        .date{
+            p{
+                padding: 50px 0;
+                text-transform: uppercase;
+                font-size: .9rem;
+                position: relative;
+                &::before,&::after{
+                    content: "";
+                    position: absolute;
+                    height: 1px;
+                    background: #cac8c8;
+                    width: 30%;
+                    left: 50%;
+                    top: 50%;
+                }
+                &::before{
+                    transform: translate(-50%,-50%) translateX(-85%);
+                }
+                   
+                &::after{
+                    transform: translate(-50%,-50%) translateX(85%);
+                }
+            }
+        }
+
+        h2{
+            text-transform: uppercase;
+            @include font1;
+            font-weight: 800;
+            font-size: 1.8rem;
+            width: 40%;
+            margin: 0 auto;
+        }
+        .massive-p{
+            font-style: italic;
+            line-height: 38px;
+            width: 50%;
+            margin: 20px auto;
+        }
+    }
     img{
-        width: 800px;
+        width:50%;
     }
 }
