--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -1,6 +1,6 @@
 $color1: rgb(255, 252, 252);
 $color2: rgb(61, 60, 60);
-$color3: rgb(207, 206, 206);
+$color3:rgb(233, 233, 233);
 
 @mixin childcenter {
   display: flex;
@@ -44,9 +44,15 @@ h1 {
   letter-spacing: 5px;
   width: 43%;
   font-size: 2.8em;
-  
 }
-
 a{
   text-decoration: none;
+}
+button{
+  all: unset;
+  text-transform: uppercase;
+  @include font1;
+  border: solid 2px black;
+  padding: 6px;
+  cursor: pointer;
 }
