--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -2,8 +2,10 @@ main{
     background: $color1;
     margin: 0 auto;
     width: clamp(715px,80vw,1100px);
-
+    height: 100%;
     .first-sect{
+        width: 100%;
+        height: 100%;
         .date{
             p{
                 padding: 50px 0;
@@ -43,8 +45,52 @@ main{
             width: 50%;
             margin: 20px auto;
         }
+        .massive-picture{
+            img{
+                width: 70%;
+                height: auto;
+            }
+            .massive-button{
+                padding:60px;
+                button{
+                    font-weight: 700;
+                }
+            } 
+        }
     }
-    img{
-        width:50%;
+    .seconde-sect{
+        display: flex;
+        border-top: 1px solid  #cac8c8;
+        width: 100%;
+        height: 100%;
+        img{
+            width: 80%;
+            height:auto;
+        }
+        .left-part,.right-part{
+            border-right: 1px solid #cac8c8;
+            padding-bottom: 45px;
+            .date{
+                text-transform: uppercase;
+                font-size: .9rem;
+                margin: 15px 0;
+            }
+            h3{
+                text-transform: uppercase;
+                @include font1;
+                margin: 20px auto;
+                width: 45%;
+            }
+            .Magna-p{
+                width: 80%;
+                margin: 0 auto;
+                text-align: left;
+                line-height: 26px;
+            }
+            .Magna-button{
+                padding: 10px
+            }
+
+        }
     }
 }
