--- a/assets/styles/_setting.scss
+++ b/assets/styles/_setting.scss
@@ -8,22 +8,17 @@ $color3:rgb(233, 233, 233);
 }
 
 @font-face {
-  font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/Inter-Bold.ttf);
+  font-family: "Inter-bold";
+  src: url(../assets/fonts/Inter-Bold.ttf);
 }
 
 @font-face {
   font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/Inter-ExtraLight.ttf);
+  src: url(../assets/fonts/Inter-ExtraLight.ttf);
 }
-@mixin font1 {
-  font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/Inter-Bold.ttf);
-}
-@mixin font2 {
-  font-family: "Inter", sans-serif;
-  src: url(/assets/fonts/Inter-ExtraLight.ttf);
-}
+ $font1:Inter-bold,sans-serif;
+
+$font2: "Inter", sans-serif;
 * {
   margin: 0;
   padding: 0;
@@ -34,26 +29,38 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
-  background: url(/assets/images/bg.jpg) fixed center/cover;
+  background: url(../images/bg.jpg) fixed center/cover;
+  &::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #000;
+    top: 0;
+    left: 0;
+    animation:Animbody forwards ease 1.5s;
+    animation-delay: 0.15s;
+    @keyframes Animbody {
+      to{
+        opacity: 0;
+      } 
+    }
+  }
 }
-h1 {
-  @include font1;
-  text-transform: uppercase;
-  font-weight: 850;
-  color: $color1;
-  letter-spacing: 5px;
-  width: 43%;
-  font-size: 2.8em;
+html{
+  scroll-behavior: smooth;
 }
+
 a{
   text-decoration: none;
 }
 button{
   all: unset;
   text-transform: uppercase;
-  @include font1;
+  font-family: $font1;
   border: solid 2px black;
   padding: 10px;
   font-weight: 600;
   cursor: pointer;
+  letter-spacing: 4px;
 }
