--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,4 +1,7 @@
 footer{
+    @media screen and (max-width:769px) { 
+        width: clamp(300px,80%,1100px);
+    }
     width: clamp(715px,80vw,1100px);
     background: $color3;
     margin: 20px auto;
@@ -8,6 +11,9 @@ footer{
         grid-template-columns: repeat(2,50%);
         width: 100%;
         height: 100%;
+        @media screen and (max-width:729px) {
+            grid-template-columns: 1fr;
+        }
         .form-right{
             display: grid;
             grid-template-rows:8% 7% 8% 7% 8% 44% 7%;
@@ -22,7 +28,7 @@ footer{
                 font-weight: 580;
                 color: rgb(53, 51, 51);
                 font-size: .9rem;
-                @include font1;
+                font-family: $font1;
             }
             input{
                 height:100%;
@@ -39,6 +45,14 @@ footer{
                 margin: 20px 0;
             }
             input[type="button"]{
+                @media screen and (max-width:757px) {
+                font-size: .5em;
+                letter-spacing: normal;
+                font-size: small;
+                }
+                @media screen and (max-width:351px) {
+                    width: 60%;
+                    }
                 width: 50%;
                 padding: 5px;
                 cursor: pointer;
@@ -77,8 +91,11 @@ footer{
                         margin: 0 auto;
                         font-size: .9rem;
                         font-weight: 580;
-                        @include font1;
+                        font-family: $font1;
                         text-transform: uppercase;
+                        @media screen and (max-width:351px) {
+                            font-size: .7rem;
+                            }
                     }
                 }
                 .column-right{
@@ -86,8 +103,11 @@ footer{
                     width: 100%;
                     text-align: left;
                     p{
-                        @include font1;
+                        font-family: $font1;
                         color: rgb(121, 121, 121);
+                        @media screen and (max-width:351px) {
+                            font-size: .7rem;
+                            }
                     } 
                     .reseau-last{
                         display: flex;
@@ -96,7 +116,7 @@ footer{
                        span{
                         width:35px;
                         height: 35px;
-                        border: 1px solid black ;
+                        border: 1px solid rgb(170, 168, 168) ;
                         border-radius: 150px;
                         transition: ease .5s;
                         &:hover i{
