--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,110 +1,142 @@
-header{
+header {
+  height: 100vh;
+  .header-title {
+    @include childcenter;
+    flex-direction: column;
+    align-items: center;
     height: 100vh;
-    .header-title{
-        @include childcenter;
-        flex-direction: column;
-        align-items: center;
-        height: 90%;
-
-        .part-icone{
-            p{
-                font-style: italic;
-                color: rgb(241, 240, 240);
-                margin:5px auto;
-            }
-            .icone{
-                width: 45px;
-                height: 45px;
-                border-radius: 150px;
-                margin: 20px auto;
-                border: solid 1px white;
-                position: relative;
-                cursor: pointer;
-                
-                i{
-                    color: white;
-                    position:absolute;
-                    top: 50%;
-                    left:50%;
-                    transform: translate(-50%,-50%);
-                }
-            }
+    transform: translateY(40px);
+    animation: Animheader 1.5s ease forwards;
+    animation-delay: 0.15s;
+    opacity: 0;
+    @keyframes Animheader {
+        to{
+          transform: translateY(0);
+          opacity: 1;
         }
     }
-    nav{
-        height: 80px;
-        width: clamp(715px,80%,1100px);
-        background:rgba(209, 207, 207, 0.728);
-        color:black;
-        position: absolute;
-        transform: translateX(-50%);
-        left: 50%;
-        bottom: 0;
-        .nav{
-            display: flex;
-            justify-content: space-between;
+    h1 {
+      font-family: $font1;
+      text-transform: uppercase;
+      font-weight: 850;
+      color: $color1;
+      letter-spacing: 5px;
+      width: 50%;
+      font-size: 3.5vw;
+    }
+
+    .part-icone {
+      p {
+        font-style: italic;
+        color: rgb(241, 240, 240);
+        margin: 5px auto;
+        @media screen and (max-width:769px) {
+            width: 50%;
+            font-size:.9em;
+        }
+        @media screen and (max-width:533px) {
+            font-size: .8em;   
+        }
+        @media screen and (max-width:330px) {
+            font-size: .7em;
+            
+        }
+      }
+      .icone {
+        width: 45px;
+        height: 45px;
+        border-radius: 150px;
+        margin: 20px auto;
+        border: solid 1px white;
+        position: relative;
+        cursor: pointer;
+
+        i {
+          color: white;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+  nav {
+    @media screen and (max-width: 769px) {
+      width: clamp(300px, 80%, 1100px);
+    }
+    height: 80px;
+    width: clamp(715px, 80%, 1100px);
+    background: rgba(209, 207, 207, 0.728);
+    color: black;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      ul {
+        width: 45%;
+        display: flex;
+        height: 100%;
+        &:hover li:not(:hover) {
+          background: none;
+        }
+        &:hover li:not(:hover) a {
+          color: $color1;
+        }
+        li {
+          display: flex;
+          align-items: center;
+          text-transform: uppercase;
+          font-family: $font1;
+          cursor: pointer;
+          width: 100%;
+          height: 100%;
+          transition: ease 0.3s;
+          &:hover {
+            background: rgb(238, 236, 236);
+          }
+          &:hover a {
+            color: black;
+          }
+          &:first-child {
+            background: rgb(238, 236, 236);
+          }
+          &:first-child a {
+            color: black;
+          }
+          a {
+            color: $color1;
             width: 100%;
-            height: 100%;
-            ul{
-            width: 45%;
-            display: flex;
-            height: 100%;
-            &:hover li:not(:hover){
-                background: none;
-            }
-            &:hover li:not(:hover) a{
-                color:$color1;
-            }
-            li{
-                display: flex;
-                align-items: center;
-                text-transform: uppercase;
-                @include font1;
-                cursor: pointer;
-                width: 100%;
-                height: 100%;
-                transition:  ease .3s;
-                &:hover{
-                    background:rgb(238, 236, 236);
-                }
-                &:hover a{
-                    color: black;
-                }
-                &:first-child{
-                    background:rgb(238, 236, 236);
-                }
-                &:first-child a{
-                    color: black;
-                }
-                a{
-                    color: $color1;
-                    width: 100%;
-                    transition:  ease .3s;
-                    font-size: .9rem;
-                    font-weight:700;
-                }
-            } 
-            }
+            transition: ease 0.3s;
+            font-size: 0.9rem;
+            font-weight: 700;
+          }
         }
-
-        .reseau{
-            display: flex;
-            align-items: center;
-            height: 100%;
-            width: 15%;
-            i{
-                width: 25%;
-                cursor: pointer;
-                color:$color1;
-                transition:ease .5s;
-                &:hover{
-                    transform: scale(1.6);
-                }
-            }
-        }
-        
+      }
     }
-    
+
+    .reseau {
+      display: flex;
+      align-items: center;
+      height: 100%;
+      width: 15%;
+      i {
+        @media screen and (max-width: 769px) {
+          display: none;
+        }
+        width: 25%;
+        cursor: pointer;
+        color: $color1;
+        transition: ease 0.5s;
+        &:hover {
+          transform: scale(1.6);
+        }
+      }
+    }
+  }
 }
-   
-    
