--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -47,16 +47,17 @@ header {
         height: 45px;
         border-radius: 150px;
         margin: 20px auto;
-        border: solid 1px white;
+        border: solid 2px white;
         position: relative;
         cursor: pointer;
-
         i {
           color: white;
           position: absolute;
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          font-weight: 800;
+          font-size: 1.5em;
         }
       }
     }
